--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+html, body .create-product{ height: 100%;
+    color: rgb(4, 4, 104);
+    cursor: pointer;
+
+}
+body table td th tr { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
