--- a/src/app/product-create/product-create.component.html
+++ b/src/app/product-create/product-create.component.html
@@ -32,31 +32,59 @@
 <div class="container-fluid w-50  p-5  mt-5 ">
   <div class="card">
     <div class="card-header text-white" style="background-color: #717272;">
-      <h3 class="mt-3">Edit Product Details</h3>
+      <h3 class="mt-3">Create Product Details</h3>
     </div>
     <div class="card-body">
-      <form class="w-100">
-        <div>
-          <label for="title">Title</label>
-          <input id="title" class="form-control" name="title" type="text" required [(ngModel)]="title" />
+      <form name="form" #f="ngForm" (ngSubmit)="f.form.valid && onSubmit()" novalidate>
+        <div class="form-group">
+          <label>Title</label>
+          <input type="text" class="form-control" name="title" [(ngModel)]="form.title" required #title="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && title.errors }" />
+          <div *ngIf="f.submitted && title.errors" class="invalid-feedback">
+            <div *ngIf="title.errors['required']">title is required</div>
+          </div>
         </div>
-  
-        <div>
-          <label for="description">Description</label>
-          <textarea id="description" class="form-control" name="description" type="text" required
-          [(ngModel)]="description" cols="5" rows="5"></textarea>
+
+        <div class="form-group">
+          <label>Description</label>
+          <textarea class="form-control" name="description" [(ngModel)]="form.description" required
+          #description="ngModel" [ngClass]="{ 'is-invalid': f.submitted && description.errors }" cols="5" rows="5"></textarea>
+          <div *ngIf="f.submitted && description.errors" class="invalid-feedback">
+            <div *ngIf="description.errors['required']">description is required</div>
+          </div>
         </div>
-        <div>
-          <label for="price">Price</label>
-          <input id="price" class="form-control" name="price" type="text" required [(ngModel)]="price" />
+
+
+
+        <div class="form-group">
+          <label>Price</label>
+          <input type="number" class="form-control" name="price" [(ngModel)]="form.price" required #price="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && price.errors }" />
+          <div *ngIf="f.submitted && price.errors" class="invalid-feedback">
+            <div *ngIf="price.errors['required']">price is required</div>
+            <div *ngIf="price.errors['minlength']">
+              price must be at least 6 characters
+            </div>
+            <div *ngIf="price.errors['maxlength']">
+              Username must not exceed 40 characters
+            </div>
+          </div>
         </div>
-        <div>
-          <label for="image">Image</label>
-          <input id="image" class="form-control" name="image" type="file" required [(ngModel)]="image" />
+
+        <div class="form-group">
+          <label>Image</label>
+          <input type="file" class="form-control" name="image" [(ngModel)]="form.image" required #image="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && image.errors }" />
+          <div *ngIf="f.submitted && image.errors" class="invalid-feedback">
+            Imgae is required
+          </div>
         </div>
-        <div class="mt-3 d-flex justify-content-between">
-          <button type="button" class="btn btn-primary" (click)="submit()">Submit</button>
-          <button type="button" class="btn btn-danger" (click)="cancel()">Cancel</button>
+
+        <div class="form-group">
+          <div class="mt-3 d-flex justify-content-between">
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-danger" (click)="cancel()">Cancel</button>
+          </div>
         </div>
       </form>
     </div>
